# huskarl-pingora

./: Cargo.toml  README.md  mise.toml
examples/: jwt_proxy.rs  login_proxy.rs
src/: ctx.rs  error.rs  guard.rs  lib.rs  outcome.rs  proxy.rs  response.rs  rule.rs  scopes.rs  uri.rs
src/login/: config.rs  cookie.rs  cookie_session.rs  ctx.rs  error_page.rs  grant.rs  mod.rs  serde_time.rs  session.rs  store_session.rs  token_session.rs  url.rs
src/login/proxy/: handlers.rs  mod.rs  tests.rs
src/resource/: ctx.rs  error.rs  mod.rs  outcome.rs  proxy.rs  response.rs  rule.rs  scopes.rs  test_support.rs  uri.rs
src/resource/guard/: mod.rs  tests.rs
